[package]
name = "link_expander"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = "10.1.0"
log = "0.4.29"
rand = "0.9.2"
reqwest = { version="0.13.1", default-features = false, features = ['json', 'gzip', 'brotli', 'deflate', 'cookies', 'default-tls']}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
thiserror = "2.0.18"
tokio = { version ="1.49.0", features=['macros', 'rt-multi-thread']}
tower-http = { version = "0.6.8", features = ['cors']}
url = "2.5.7"
argon2 = "0.5.3"
email_address = "0.2.9"

[dev-dependencies]
axum-macros = "0.5.0"
pretty_assertions = "1.4.1"
serial_test = "3.2.0"
tower = { version = "0.5.2", features = ["util"] }
