[package]
name = "link_expander"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
dashmap = "6.1.0"
dirs = "6.0.0"
env_logger = "0.11.9"
log = "0.4.29"
rand = "0.10.0"
reqwest = { version="0.13.2", default-features = false, features = ['json', 'gzip', 'brotli', 'deflate', 'cookies', 'default-tls']}
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version ="1.50.0", features=['macros', 'rt']}
tower-http = { version = "0.6.8", features = ['cors']}

[dev-dependencies]
axum-macros = "0.5.0"
pretty_assertions = "1.4.1"
tower = { version = "0.5.3", features = ["util"] }
